Numeric map implementation
